--- a/src/composer.json
+++ b/src/composer.json
@@ -29,7 +29,8 @@
         "league/glide": "^1.2",
         "yiisoft/yii2-httpclient": "^2.0",
         "froala/yii2-froala-editor": "^2.6",
-        "creocoder/yii2-nested-sets": "^0.9.0"
+        "creocoder/yii2-nested-sets": "^0.9.0",
+        "monolog/monolog": "^1.22"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
